# FACEAPP

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md
.github/workflows/: cmake.yml  docker  docker.yml
FaceApp/: CMakeLists.txt  a.txt
FaceApp/Tests/: CMakeLists.txt  CMakeTest.cpp
FaceApp/app/: App.cpp  CMakeLists.txt  START.cpp
FaceApp/cmake/: FindSphinx.cmake
FaceApp/docs/: CMakeLists.txt  conf.py  index.rst
FaceApp/include/: FaceApp.h
FaceApp/src/: CMakeLists.txt  FaceApp.cpp
docs/: CMakeLists.txt  Doxyfile.in
html/: _app_8cpp.html  _c_make_test_8cpp.html  _face_app_8cpp.html  _face_app_8h.html  _face_app_8h_source.html  annotated.html  class_face_app_test-members.html  class_face_app_test.html  classes.html  dir_1ed05c9e2a78a61e29fa4d1978a11f57.html  dir_5670ed963852e29fc0329a674442f425.html  dir_a6e353bcf5a0f807c5e9bfcefc0ac20e.html  dir_b94d8ea4c3d3ce1da2cfddc494d57e7d.html  dir_cc8b12a98d2a1f78f1738fb13bd0ba8e.html  files.html  globals.html  globals_func.html  hierarchy.html  index.html
html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  files_2.js  functions_0.js  searchdata.js
